--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.0-beta1",
     "emailjs-com": "^3.2.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.31.2",
     "react-modal": "^3.15.1",
